syntax = "proto3";

package pomelo.service;

// IdRequest 表示包含ID参数的请求
message IdRequest {
  // 唯一标识符
  int32 id = 1;
}

// RequestUserIdRequest 表示包含用户ID参数的请求
message RequestUserIdRequest {
  // 发起请求的用户ID
  int32 requestUserId = 1;
}
